build/log/idf_py_stderr_output_192679
/home/pi/remoteLED/main/remoteLED.c:94:29: error: 'MAX_RESPONSE_SIZE' undeclared here (not in a function)
   94 | static char response_buffer[MAX_RESPONSE_SIZE] = {0};
      |                             ^~~~~~~~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:96:13: error: redefinition of 'auth_token'
   96 | static char auth_token[512] = {0};  // Buffer for storing extracted token
      |             ^~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:91:13: note: previous definition of 'auth_token' with type 'char[512]'
   91 | static char auth_token[512] = "";
      |             ^~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:97:20: error: redefinition of 'TAG'
   97 | static const char *TAG = "ESP32_SSL";
      |                    ^~~
/home/pi/remoteLED/main/remoteLED.c:90:20: note: previous definition of 'TAG' with type 'const char *'
   90 | static const char *TAG = "ESP32_SSL";
      |                    ^~~
/home/pi/remoteLED/main/remoteLED.c: In function '_http_event_handler':
/home/pi/remoteLED/main/remoteLED.c:117:13: error: implicit declaration of function 'extract_auth_token' [-Wimplicit-function-declaration]
  117 |             extract_auth_token(response_buffer);
      |             ^~~~~~~~~~~~~~~~~~
/home/pi/remoteLED/main/remoteLED.c: At top level:
/home/pi/remoteLED/main/remoteLED.c:94:13: warning: 'response_buffer' defined but not used [-Wunused-variable]
   94 | static char response_buffer[MAX_RESPONSE_SIZE] = {0};
      |             ^~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/remoteLED.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
